--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -2,5 +2,5 @@
 
 <div class="container text-center"> 
     <h1>About Us</h1> 
-    <p>We make'a da coffee wid'a da beans</p> 
+    <p>At AllTheBeansApp, we love beans! Take a look at our Bean of the Day, or visit Our Beans page to see our fine selection.</p> 
 </div>
